--- a/youtube/app.json
+++ b/youtube/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "NavegandoEntrepaginas-Tab",
-    "slug": "NavegandoEntrepaginas-Tab",
+    "name": "StackNavegacao5",
+    "slug": "StackNavegacao5",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
