--- a/youtube/package.json
+++ b/youtube/package.json
@@ -8,30 +8,23 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.10",
-    "axios": "^0.19.2",
-    "expo": "~37.0.3",
-    "expo-font": "~8.1.0",
-    "expo-screen-orientation": "~1.0.0",
-    "galio-framework": "^0.6.3",
-    "native-base": "^2.13.12",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
-    "react-native-elements": "^2.0.0",
-    "react-native-gesture-handler": "^1.6.1",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/material-bottom-tabs": "^5.2.16",
+    "@react-navigation/native": "^5.7.3",
+    "@react-navigation/stack": "^5.9.0",
+    "expo": "~38.0.8",
+    "expo-screen-orientation": "~1.1.1",
+    "expo-status-bar": "^1.0.2",
+    "react": "~16.11.0",
+    "react-dom": "~16.11.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-gesture-handler": "~1.6.0",
     "react-native-paper": "^4.0.1",
-    "react-native-reanimated": "^1.8.0",
-    "react-native-safe-area-context": "^0.7.3",
-    "react-native-screens": "^2.0.0-beta.4",
-    "react-native-vector-icons": "^6.6.0",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "~3.0.7",
+    "react-native-screens": "~2.9.0",
     "react-native-web": "~0.11.7",
-    "react-native-webview": "8.1.1",
-    "react-navigation": "^4.3.9",
-    "react-navigation-drawer": "^2.4.13",
-    "react-navigation-material-bottom-tabs": "^2.3.0",
-    "react-navigation-stack": "^2.4.0",
-    "react-navigation-tabs": "^2.8.13"
+    "react-native-webview": "9.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
